manifests/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic
  namespace: elastic-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: elastic-cert
  rules:
  - host: elastic.${ECK_DOMAIN}
    http:
      paths:
        - path: /
          backend:
            serviceName: quickstart-es
            servicePort: 9200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - kibana.${ECK_DOMAIN}
    secretName: kibana-cert
  rules:
  - host: kibana.${ECK_DOMAIN}
    http:
      paths:
        - path: /
          backend:
            serviceName: quickstart-kibana
            servicePort: 5601
